--- a/vue-backend/package.json
+++ b/vue-backend/package.json
@@ -14,7 +14,7 @@
     "generate": "npx prisma generate",
     "studio": "npx prisma studio",
     "seed": "ts-node prisma/seed.ts",
-    "db:reset": "npx prisma migrate reset && npm run seed"
+    "db:reset": "npx prisma migrate reset"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
